# ecosystem

./: .clang-format  .gitignore  00_MASTER_SOFTWARE_PLAN.md  01_SS-SP_LITE_HARDWARE_REFERENCE.md  02_PROTOCOL_STACK.md  03_UI_LAYOUT_SPEC.md  04_LICENSING_AND_FORK_STRATEGY.md  05_SECURITY_MODEL.md  06_GOVERNANCE.md  07_BUSINESS_MODEL_AND_OPEN_SOURCE.md  08_UNIVERSAL_CONNECTIVITY.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  i need you to consider the follwoig.txt
.claude/: settings.json
.claude/agent-memory/t1-cross-review/: MEMORY.md  defects_coredump_panic.md  defects_esp_wifi_flash_persist.md  defects_relocated_normative_section.md  defects_scripted_guard_placement.md  gotchas_repo.md  gotchas_ss_hal.md  gotchas_ss_power.md  gotchas_ss_wifi.md  reference_idf_source_fetch.md  workflow_cross_review.md
.claude/agent-memory/t1-review/: MEMORY.md  review-gotchas-firmware.md
.claude/agent-memory/t2-builder/: MEMORY.md  build-host-tests.md  friction-sbom-component-count.md  pattern-pure-core-component.md
.claude/agent-memory/t2-designer/: MEMORY.md  project_contract-patterns.md  project_tooling-contract-patterns.md
.claude/agents/: retrieval.md  t1-cross-review.md  t1-review.md  t2-builder.md  t2-designer.md  t3-standard.md  t4-mechanical.md
.claude/rules/: firmware.md  markdown.md  portfolio.md  protocol.md  tools-ci.md
.claude/skills/story-run/: SKILL.md
.claude/skills/t1-pipeline/: SKILL.md
.claude/skills/verify/: SKILL.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  docs.md  feature.md  rfc-request.md  security.md
.github/PULL_REQUEST_TEMPLATE/: docs.md  feature.md  rfc.md  security.md
.github/workflows/: board-parity.yml  cla.yml  covenant.yml  dco.yml  docs-lint.yml  firmware-build.yml  host-tests.yml  release-sbom.yml  target-tests.yml  weekly-audit.yml  wire-format-policy.yml
ci/containers/firmware/: Dockerfile
cloud/: README.md
cloud/telephony-bridge/: TPI_CONTRACT.md
companion/: README.md
docs/: CHANGELOG.md  CLA.md  DEPRECATIONS.md  OWNER_DECISIONS.md  TRADEMARK.md
docs/dev/: BENCH_POWER_LITE.md  BUILDING.md  COEX_STRESS_LITE.md  ENGINEERING_LOG.md  EVIDENCE_RUNSHEET.md  HIL_TEST_PLAN_LITE.md  OMEGA_HW_BASELINE.md  OMEGA_LEDGER_ALIGNMENT.md  POWER_BUDGET_LITE.md
docs/dev/contracts/: S-02-019-sbom-contract.md
docs/portfolio/: 00_METHODOLOGY.md  01_BRIEF.md  02_PRD.md  03_ARCHITECTURE.md  04_BLUEPRINT.md  05_INFRASTRUCTURE_AND_SCALE.md  06_COMPETITIVE_LANDSCAPE.md  07_FINAL_READINESS_TRIAGE.md  08_HALOW_TECHNOLOGY_DOSSIER.md  09_VENTURE_EXECUTION_MAP.md  10_MODEL_ALLOCATION_STRATEGY.md  11_TOKEN_ECONOMY.md  12_TELEPHONY_AND_UNIVERSAL_INTEROP_DOSSIER.md  ALLOCATION_MAP.md  EPIC_INDEX.md  README.md  STORIES_INDEX.md
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/components/hal/: CMakeLists.txt
firmware/components/hal/include/: ss_hal.h  ss_hal_audio.h  ss_hal_buttons.h  ss_hal_caps.h  ss_hal_gnss.h  ss_hal_imu.h  ss_hal_leds.h  ss_hal_radio_ble.h  ss_hal_radio_halow.h  ss_hal_radio_lora.h  ss_hal_radio_wifi.h  ss_hal_rng.h  ss_hal_secure_elem.h
firmware/components/ss_hal/: CMakeLists.txt
firmware/components/ss_hal/include/: ss_hal.h  ss_hal_audio.h  ss_hal_buttons.h  ss_hal_caps.h  ss_hal_display.h  ss_hal_gnss.h  ss_hal_haptic.h  ss_hal_imu.h  ss_hal_leds.h  ss_hal_muxctl.h  ss_hal_ota.h  ss_hal_power.h  ss_hal_radio_ble.h  ss_hal_radio_halow.h  ss_hal_radio_lora.h  ss_hal_radio_wifi.h  ss_hal_rng.h  ss_hal_secure_elem.h  ss_hal_storage.h  ss_hal_time.h  ss_hal_touch.h  ss_hal_types.h  ss_hal_usb.h  ss_hal_watchdog.h
firmware/components/ss_hal/src/: ss_hal.c
firmware/components/ss_hal/test/conformance/: CONFORMANCE_SPEC.md  ss_hal_conformance.h  ss_hal_conformance_core.c  ss_hal_conformance_vectors.c
firmware/components/ss_log/: CMakeLists.txt
firmware/components/ss_log/include/: ss_log.h  ss_log_format.h
firmware/components/ss_log/src/: ss_log.c  ss_log_format.c
firmware/components/ss_log/test/host/: .gitignore  Makefile  test_ss_log_format.c
firmware/main/: CMakeLists.txt  Kconfig.projbuild  main.cpp  ss_bootmark.cpp  ss_bootmark.h  ss_compass.cpp  ss_compass.h  ss_diag.cpp  ss_diag.h  ss_display_boot.cpp  ss_display_boot.h  ss_memwatch.cpp  ss_memwatch.h  ss_memwatch_core.c  ss_memwatch_core.h  ss_nvs.cpp  ss_nvs.h  ss_nvs_core.c  ss_panic_guard.cpp  ss_panic_guard.h  ss_panic_guard_core.c  ss_recovery.cpp  ss_recovery.h  ss_recovery_core.c  ss_tasks.cpp  ss_tasks.h  ss_uart_engine.cpp  ss_uart_engine.h  ss_version.cpp  ss_version.h  ss_wdt.c  version.cmake
firmware/main/test/: test_ss_tasks.c  test_ss_wdt.c
firmware/test/host/: CMakeLists.txt
firmware/test/host/mocks/: board_config.h  esp_err.h  ss_hal_mock_env.c  ss_hal_mock_env.h
firmware/test/host/tests/: test_hal_conformance.cpp  test_hal_mock.cpp  test_ss_display_core.cpp  test_ss_gnss_core.cpp  test_ss_input_core.cpp  test_ss_log_format.cpp  test_ss_memwatch.cpp  test_ss_muxctl_core.cpp  test_ss_nvs.cpp  test_ss_panic_guard.cpp  test_ss_power_core.cpp  test_ss_recovery.cpp
governance/: OPEN_ASSURANCE.md  covenant-anchors.json  decisions.md  ss-sp-security-intake.pub.asc
governance/wg/: wg-ai.md  wg-cloud.md  wg-community.md  wg-companion.md  wg-compliance.md  wg-docs.md  wg-firmware.md  wg-legal.md  wg-protocol.md  wg-radio.md  wg-security.md  wg-ui.md
models/CATALOG/: README.md
rfcs/: 0001-rfc-process-adoption.md  0002-toolchain-pinning-policy.md  0003-compat-deprecation-policy.md  0004-scope-lock.md  DRAFT-foundation-transfer.md  DRAFT-scope-lock.md  README.md  TEMPLATE.md
signatures/: cla.json
tools/: allocation.py  board-parity.py  boot-budget-check.py  contract-audit.py  contract-ownership.txt  covenant-check.py  gen-sbom.py  gen-stories-index.py  lint-docs.py  task-policy-check.py  xtensa-decode-crash.py
tools/claude/: format-c-hook.sh  run-queue.sh  session-brief.sh  statusline.sh  work.sh
tools/tests/: test_fw_version_matches_sbom.py  test_gen_sbom.py
(+114 files in other folders)
